--- a/style.css
+++ b/style.css
@@ -10,15 +10,15 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 .top-banner{
-   
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
 .half-width{
     width: 50%;
-    padding-left: 5%;
+    padding-left: 10%;
 }
 .half-width img{
     width: 80%;
@@ -26,7 +26,13 @@ section{
 .button{
     text-decoration: none;
     background-image: linear-gradient(orange, tomato);
+    color: white;
+    font-weight: 700;
     border-radius: 5px;
-    padding: 8px 30px;
-    padding: 10px 30px;
+    padding: 10px 40px;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
